--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   },
   "author": "NamPE",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/NamPE286/demon-list-vn-sdk.git"
+  },
   "devDependencies": {
     "ts-node": "^10.9.2",
     "tsup": "^8.3.5",
