--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "ts-node": "^10.9.2",
     "tsup": "^8.3.5",
     "typescript": "^5.6.3"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.46.1"
   }
 }
