--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   ],
   "scripts": {
     "build": "tsup",
+    "typegen": "supabase gen types typescript --project-id qdwpenfblwdmhywwszzj > type/database.types.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "NamPE",
