--- a/package.json
+++ b/package.json
@@ -1,30 +1,32 @@
 {
-  "name": "demonlistvn-sdk",
-  "version": "1.0.0",
-  "description": "Demon List VN SDK",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
-  "scripts": {
-    "build": "tsup",
-    "typegen": "supabase gen types typescript --project-id qdwpenfblwdmhywwszzj > type/database.types.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "NamPE",
-  "license": "ISC",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/NamPE286/DemonListVN-sdk.git"
-  },
-  "devDependencies": {
-    "ts-node": "^10.9.2",
-    "tsup": "^8.3.5",
-    "typescript": "^5.6.3"
-  },
-  "dependencies": {
-    "@supabase/supabase-js": "^2.46.1"
-  }
+    "name": "demonlistvn-sdk",
+    "version": "1.0.0",
+    "description": "Demon List VN SDK",
+    "main": "./dist/index.js",
+    "module": "./dist/index.mjs",
+    "types": "./dist/index.d.ts",
+    "files": [
+        "dist"
+    ],
+    "scripts": {
+        "build": "tsup",
+        "typegen": "supabase gen types typescript --project-id qdwpenfblwdmhywwszzj > type/database.types.ts",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "format": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\""
+    },
+    "author": "NamPE",
+    "license": "ISC",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/NamPE286/DemonListVN-sdk.git"
+    },
+    "devDependencies": {
+        "prettier": "^3.3.3",
+        "ts-node": "^10.9.2",
+        "tsup": "^8.3.5",
+        "typescript": "^5.6.3"
+    },
+    "dependencies": {
+        "@supabase/supabase-js": "^2.46.1"
+    }
 }
