--- a/package.json
+++ b/package.json
@@ -21,10 +21,16 @@
         "url": "https://github.com/NamPE286/DemonListVN-sdk.git"
     },
     "devDependencies": {
+        "@eslint/js": "^9.14.0",
+        "@types/eslint__js": "^8.42.3",
+        "@typescript-eslint/eslint-plugin": "^8.14.0",
+        "@typescript-eslint/parser": "^8.14.0",
+        "eslint": "^9.14.0",
         "prettier": "^3.3.3",
         "ts-node": "^10.9.2",
         "tsup": "^8.3.5",
-        "typescript": "^5.6.3"
+        "typescript": "^5.6.3",
+        "typescript-eslint": "^8.14.0"
     },
     "dependencies": {
         "@supabase/supabase-js": "^2.46.1"
